[package]
name = "signal-msg"
version = "0.4.0"
description = "Handle UNIX process signals with a shared channel"
readme = "README.md"
license = "MIT"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/signal-msg"
documentation = "https://docs.rs/signal-msg/"
categories = ["development-tools"]
keywords = ["signal", "signals", "unix", "SIGINT", "SIGTERM"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"
rust-version = "1.56"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2"

[[example]]
name = "demo"
