[package]
name = "signal-msg"
version = "0.7.0"
description = "UNIX signal handling as an iterator over a shared channel"
readme = "README.md"
license = "MIT"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/signal-msg"
documentation = "https://docs.rs/signal-msg/"
categories = ["development-tools"]
keywords = ["signal", "signals", "unix", "SIGINT", "SIGTERM"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"
rust-version = "1.63"

[dependencies]
libc = "0.2"

[[example]]
name = "signal-msg-demo"
